--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
 
     body {
       font-family: 'Montserrat', sans-serif;
-      margin: 0;
-      padding: 0;
       height: 100vh;
       overflow: hidden;
-      background: black;
+      background: #000;
       color: #0f0;
       display: flex;
       align-items: center;
       justify-content: center;
+      flex-direction: column;
       position: relative;
     }
 
@@ -40,60 +39,68 @@
       flex: 1;
       background-size: cover;
       background-position: center;
-      opacity: 0.1;
+      opacity: 0.07;
+      transition: all 0.3s ease;
     }
 
     .left-side {
-      background-image: url('https://i.imgur.com/ZmYrV1j.jpg'); /* Designer image */
+      background-image: url('https://i.imgur.com/ZmYrV1j.jpg');
     }
 
     .right-side {
-      background-image: url('https://i.imgur.com/Ns9bq0D.jpg'); /* Coder image */
+      background-image: url('https://i.imgur.com/Ns9bq0D.jpg');
     }
 
     .title {
-      font-size: 2rem;
+      font-size: 2.5rem;
       color: #00ffcc;
-      margin-bottom: 2rem;
-      animation: glow 2s ease-in-out infinite alternate;
-      letter-spacing: 2px;
-      position: relative;
-      z-index: 2;
       text-align: center;
+      animation: glow 2s ease-in-out infinite alternate;
+      z-index: 2;
+      margin-bottom: 2rem;
     }
 
     @keyframes glow {
       from {
-        text-shadow: 0 0 10px #0f0, 0 0 20px #00ffcc;
+        text-shadow: 0 0 8px #0f0, 0 0 16px #00ffcc;
       }
       to {
-        text-shadow: 0 0 20px #0ff, 0 0 30px #00ffcc, 0 0 40px #00ffff;
+        text-shadow: 0 0 18px #00ffff, 0 0 30px #00ffcc, 0 0 40px #00ffff;
       }
     }
 
     .login-box {
+      z-index: 2;
+      background: rgba(0, 255, 255, 0.07);
       border: 1px solid #00ffcc;
-      background: rgba(0, 255, 255, 0.05);
+      box-shadow: 0 0 20px #00ffff33;
       padding: 2rem;
-      border-radius: 12px;
-      text-align: center;
-      box-shadow: 0 0 15px #00ffff44;
+      border-radius: 15px;
       width: 90%;
       max-width: 400px;
-      position: relative;
-      z-index: 2;
+      text-align: center;
+      animation: float 4s ease-in-out infinite;
+    }
+
+    @keyframes float {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-8px); }
     }
 
     input, button {
       margin-top: 1rem;
       padding: 0.8rem;
       width: 100%;
-      background: #000;
+      background: rgba(0, 0, 0, 0.9);
       color: #0f0;
       border: 1px solid #0f0;
       border-radius: 5px;
       font-size: 1rem;
       transition: all 0.3s ease;
+    }
+
+    input::placeholder {
+      color: #0f05;
     }
 
     input:focus {
@@ -102,12 +109,17 @@
       box-shadow: 0 0 10px #00ffccaa;
     }
 
+    button {
+      font-weight: bold;
+      background-color: #000;
+    }
+
     button:hover {
       background: #0f0;
       color: #000;
       border-color: #0f0;
+      box-shadow: 0 0 15px #0f0;
       cursor: pointer;
-      box-shadow: 0 0 10px #0f0;
     }
 
     @media screen and (max-width: 768px) {
@@ -120,20 +132,23 @@
       }
 
       .title {
-        font-size: 1.5rem;
+        font-size: 1.8rem;
       }
     }
   </style>
 </head>
 <body>
 
+  <!-- Background Image Layer -->
   <div class="split-bg">
     <div class="left-side"></div>
     <div class="right-side"></div>
   </div>
 
+  <!-- Title -->
   <div class="title">⚡ AI FUTURE POWER ⚡</div>
 
+  <!-- Login Box -->
   <div class="login-box">
     <h2>🔐 LOGIN ACCESS</h2>
     <input type="text" id="username" placeholder="Username" />
