--- a/dashboard.html
+++ b/dashboard.html
@@ -1,247 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Business Dashboard</title>
+  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>CRM‑Style Dashboard</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap">
   <style>
-    body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: #f4f8fb;
-      color: #333;
-    }
-
-    /* HEADER NAV */
-    header {
-      background: #ffffff;
-      padding: 15px 40px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    .logo {
-      font-weight: 700;
-      font-size: 20px;
-      color: #0d47a1;
-    }
-    nav a {
-      margin-left: 30px;
-      text-decoration: none;
-      color: #333;
-      font-weight: 500;
-    }
-
-    /* HERO */
-    .hero {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 60px 40px;
-      background: linear-gradient(to right, #e3f2fd, #ffffff);
-    }
-    .hero-text {
-      max-width: 600px;
-    }
-    .hero-text h1 {
-      font-size: 36px;
-      margin-bottom: 20px;
-      color: #0d47a1;
-    }
-    .hero-text p {
-      font-size: 18px;
-      margin-bottom: 20px;
-    }
-    .hero-text button {
-      background: #0d47a1;
-      color: #fff;
-      border: none;
-      padding: 12px 25px;
-      font-size: 16px;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .hero img {
-      max-width: 300px;
-      border-radius: 10px;
-    }
-
-    /* BUTTONS */
-    .buttons {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      margin: 40px 0;
-    }
-    .buttons button {
-      background: #0d47a1;
-      color: #fff;
-      padding: 15px 25px;
-      font-size: 16px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-    .buttons button:hover {
-      background: #1565c0;
-    }
-
-    /* SECTION VIEW AREA */
-    .view {
-      max-width: 800px;
-      margin: 0 auto;
-      background: #fff;
-      padding: 30px;
-      margin-bottom: 60px;
-      display: none;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-    }
-    .view.active { display: block; }
-
-    label { display: block; margin-top: 15px; font-weight: 500; }
-    input, textarea {
-      width: 100%;
-      margin-top: 5px;
-      padding: 10px;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-    textarea { resize: vertical; }
-
-    .back-btn {
-      margin-top: 20px;
-      background: #ccc;
-      border: none;
-      padding: 10px 18px;
-      cursor: pointer;
-      border-radius: 5px;
-    }
+    body {margin:0;font-family:'Poppins', sans-serif;background:#f4f8fb;color:#333;}
+    header {background:#fff;padding:15px 40px;box-shadow:0 2px 5px rgba(0,0,0,0.1); display:flex; justify-content:space-between; align-items:center;}
+    header .logo {font-size:20px; font-weight:700; color:#0d47a1;}
+    .container {display:flex;}
+    nav.sidebar {width:220px;background:#fff;min-height:100vh;padding:20px 10px;}
+    nav.sidebar a, nav.sidebar button {display:block;width:100%;padding:10px;font-weight:500;color:#333;text-align:left;border:none;background:none;cursor:pointer;}
+    nav.sidebar a:hover, nav.sidebar button:hover {background:#eceff1;}
+    .main {flex:1;padding:20px;}
+    .cards {display:flex;gap:20px;margin-bottom:20px;}
+    .card {background:#fff;padding:20px;border-radius:6px;flex:1;box-shadow:0 1px 3px rgba(0,0,0,0.1); text-align:center;}
+    table {width:100%;border-collapse:collapse;background:#fff;border-radius:6px;overflow:hidden;box-shadow:0 1px 3px rgba(0,0,0,0.1);}
+    th,td {padding:12px 15px;border-bottom:1px solid #eee;font-size:14px;}
+    th {background:#fafafa;text-align:left;}
+    tr:last-child td {border-bottom:none;}
+    .btn {padding:8px 14px; border:none; border-radius:4px; cursor:pointer; background:#0d47a1;color:#fff;}
+    .btn:hover {background:#1565c0;}
+    #modal {position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.4);display:none;justify-content:center;align-items:center;}
+    #modal .dialog {background:#fff;padding:20px;border-radius:6px;width:320px;}
+    #modal input,textarea,select {width:100%;margin:8px 0;padding:8px;border:1px solid #ccc;border-radius:4px;font-size:14px;}
   </style>
 </head>
 <body>
-
-<header>
-  <div class="logo">💼 Blossom Dashboard</div>
-  <nav>
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Portfolio</a>
-    <a href="#">Contact</a>
-  </nav>
-</header>
-
-<section class="hero">
-  <div class="hero-text">
-    <h1>Welcome to Your Business Panel</h1>
-    <p>Manage tasks, view leads, monitor inbox updates, and streamline your workflow — all in one dashboard.</p>
-    <button onclick="scrollToButtons()">Get Started</button>
+  <header><div class="logo">Primework‑style</div></header>
+  <div class="container">
+    <nav class="sidebar">
+      <button onclick="openModal()">+ New Task</button>
+      <a href="#">Dashboard</a>
+      <a href="#">Tasks</a>
+      <a href="#">Leads</a>
+      <a href="#">Inbox</a>
+      <a href="#">Settings</a>
+    </nav>
+    <div class="main">
+      <div class="cards">
+        <div class="card">Not Started<br><strong id="count-new">0</strong></div>
+        <div class="card">In Progress<br><strong id="count-progress">0</strong></div>
+        <div class="card">Testing<br><strong id="count-testing">0</strong></div>
+        <div class="card">Complete<br><strong id="count-complete">0</strong></div>
+      </div>
+      <table>
+        <thead><tr>
+          <th>#</th><th>Client</th><th>Status</th><th>Start Date</th><th>Due Date</th><th>Priority</th>
+        </tr></thead>
+        <tbody id="taskTable"><tr><td colspan="6" style="text-align:center;">No tasks yet</td></tr></tbody>
+      </table>
+    </div>
   </div>
-  <img src="https://i.imgur.com/g1IbYtB.png" alt="Business Woman">
-</section>
 
-<section class="buttons" id="mainButtons">
-  <button onclick="showView('create')">➕ Create Task</button>
-  <button onclick="showView('specs')">📋 View Specs</button>
-  <button onclick="showView('leads')">🧭 Leads Section</button>
-  <button onclick="showView('updates')">📥 Updates Inbox</button>
-  <button onclick="showView('settings')">⚙️ Settings</button>
-  <button onclick="showView('reports')">📊 Reports</button>
-</section>
+  <div id="modal">
+    <div class="dialog">
+      <h3>Create Task</h3>
+      <input type="text" id="cname" placeholder="Client Name"/>
+      <input type="date" id="cstart"/>
+      <input type="date" id="cdue"/>
+      <select id="cstatus"><option value="new">Not Started</option><option value="progress">In Progress</option><option value="testing">Testing</option><option value="complete">Complete</option></select>
+      <select id="cpriority"><option>Low</option><option>Medium</option><option>High</option></select>
+      <button onclick="addTask()" class="btn">Submit</button>
+      <button onclick="closeModal()" class="btn" style="background:#aaa;margin-left:6px;">Cancel</button>
+    </div>
+  </div>
 
-<!-- VIEWS -->
-<div id="create" class="view">
-  <h2>Create Task</h2>
-  <label>Client Name:</label><input id="clientName" type="text" />
-  <label>Client Amount:</label><input id="clientAmount" type="number" />
-  <label>Work Details:</label><textarea id="workDetails"></textarea>
-  <label><input id="fullPayment" type="checkbox" /> Full Payment Received</label>
-  <button onclick="submitTask()">Submit</button>
-  <button class="back-btn" onclick="goBack()">← Back</button>
-</div>
-
-<div id="specs" class="view">
-  <h2>Saved Tasks</h2>
-  <pre id="specsList">No tasks saved.</pre>
-  <button class="back-btn" onclick="goBack()">← Back</button>
-</div>
-
-<div id="leads" class="view">
-  <h2>Leads Section</h2>
-  <p>Organize and track client leads.</p>
-  <button class="back-btn" onclick="goBack()">← Back</button>
-</div>
-
-<div id="updates" class="view">
-  <h2>Updates Inbox</h2>
-  <p>All your recent updates and system alerts will appear here.</p>
-  <button class="back-btn" onclick="goBack()">← Back</button>
-</div>
-
-<div id="settings" class="view">
-  <h2>Settings</h2>
-  <p>Customize your dashboard settings here.</p>
-  <button class="back-btn" onclick="goBack()">← Back</button>
-</div>
-
-<div id="reports" class="view">
-  <h2>Reports</h2>
-  <p>View performance, financial, and task reports.</p>
-  <button class="back-btn" onclick="goBack()">← Back</button>
-</div>
-
-<script>
-  let tasks = JSON.parse(localStorage.getItem('tasks') || '[]');
-
-  function showView(id) {
-    document.querySelectorAll('.view').forEach(v => v.classList.remove('active'));
-    document.getElementById(id).classList.add('active');
-    document.getElementById('mainButtons').style.display = 'none';
-    if (id === 'specs') renderSpecs();
-  }
-
-  function goBack() {
-    document.querySelectorAll('.view').forEach(v => v.classList.remove('active'));
-    document.getElementById('mainButtons').style.display = 'flex';
-  }
-
-  function submitTask() {
-    const client = document.getElementById('clientName').value.trim();
-    const amount = document.getElementById('clientAmount').value.trim();
-    const details = document.getElementById('workDetails').value.trim();
-    const paid = document.getElementById('fullPayment').checked;
-    if (!client || !amount || !details) {
-      alert('Please complete all fields');
-      return;
+  <script>
+    let tasks = [];
+    function openModal(){ document.getElementById('modal').style.display='flex'; }
+    function closeModal(){ document.getElementById('modal').style.display='none'; }
+    function updateCounts(){
+      const counts = {new:0,progress:0,testing:0,complete:0};
+      tasks.forEach(t=>counts[t.status]++);
+      document.getElementById('count-new').textContent = counts.new;
+      document.getElementById('count-progress').textContent = counts.progress;
+      document.getElementById('count-testing').textContent = counts.testing;
+      document.getElementById('count-complete').textContent = counts.complete;
     }
-    tasks.push({ client, amount, details, paid });
-    localStorage.setItem('tasks', JSON.stringify(tasks));
-    alert('Task saved successfully!');
-    goBack();
-  }
-
-  function renderSpecs() {
-    const list = document.getElementById('specsList');
-    if (!tasks.length) {
-      list.textContent = 'No tasks saved.';
-      return;
+    function renderTable(){
+      const tbody = document.getElementById('taskTable');
+      tbody.innerHTML = '';
+      if (!tasks.length){
+        tbody.innerHTML = '<tr><td colspan="6" style="text-align:center;">No tasks yet</td></tr>';
+        return;
+      }
+      tasks.forEach((t,i) => {
+        const tr = document.createElement('tr');
+        tr.innerHTML = `<td>${i+1}</td><td>${t.client}</td>
+          <td>${t.status}</td><td>${t.start}</td><td>${t.due}</td><td>${t.priority}</td>`;
+        tbody.appendChild(tr);
+      });
     }
-    list.textContent = tasks.map((t, i) => 
-      `#${i+1}\nClient: ${t.client}\nAmount: $${t.amount}\nDetails: ${t.details}\nFull Payment: ${t.paid ? 'Yes' : 'No'}\n`
-    ).join('\n');
-  }
-
-  function scrollToButtons() {
-    document.getElementById('mainButtons').scrollIntoView({ behavior: 'smooth' });
-  }
-
-  window.onload = () => goBack();
-</script>
-
+    function addTask(){
+      const c = document.getElementById('cname').value,
+            s = document.getElementById('cstart').value,
+            d = document.getElementById('cdue').value,
+            st = document.getElementById('cstatus').value,
+            p = document.getElementById('cpriority').value;
+      if (!c || !s || !d) return alert('Fill all fields');
+      tasks.push({client:c,start:s,due:d,status:st,priority:p});
+      updateCounts(); renderTable(); closeModal();
+      document.getElementById('cname').value='';
+    }
+  </script>
 </body>
 </html>
