--- a/dashboard.html
+++ b/dashboard.html
@@ -3,106 +3,133 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>CRM Dashboard</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>CRM‑Style Dashboard</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <style>
     body { background: #f4f8fb; font-family: 'Poppins', sans-serif; }
-    .sidebar { width: 240px; }
-    .card-status { flex:1; margin-right:1rem; }
-    .badge-status { text-transform: capitalize; }
+    .sidebar { width: 260px; }
+    .status-badge { text-transform: capitalize; }
+    .tag-pill { margin-right: 4px; padding: 2px 6px; background: #e0e0e0; border-radius: 4px; font-size: 12px; }
   </style>
 </head>
 <body>
-  <div class="d-flex">
-    <nav class="sidebar bg-white vh-100 border-end p-3">
-      <button class="btn btn-primary w-100 mb-3" id="btnNew">+ New Task</button>
-      <ul class="nav flex-column">
-        <li class="nav-item"><a class="nav-link" href="#">Dashboard</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Tasks</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Leads</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Inbox</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Settings</a></li>
-      </ul>
-    </nav>
-    <main class="flex-fill p-4">
-      <div class="d-flex mb-4">
-        <div class="card card-status p-3 text-center"><strong>Not Started</strong><div id="c-new">0</div></div>
-        <div class="card card-status p-3 text-center"><strong>In Progress</strong><div id="c-progress">0</div></div>
-        <div class="card card-status p-3 text-center"><strong>Testing</strong><div id="c-testing">0</div></div>
-        <div class="card card-status p-3 text-center"><strong>Complete</strong><div id="c-complete">0</div></div>
-      </div>
-      <div class="table-responsive bg-white rounded shadow-sm">
-        <table class="table mb-0">
-          <thead class="table-light">
-            <tr><th>#</th><th>Client</th><th>Status</th><th>Start Date</th><th>Due Date</th><th>Priority</th></tr>
-          </thead>
-          <tbody id="taskBody"><tr><td colspan="6" class="text-center py-4">No tasks yet</td></tr></tbody>
-        </table>
-      </div>
-    </main>
-  </div>
+<div class="d-flex">
+  <nav class="sidebar bg-white vh-100 border-end p-3">
+    <button id="btnCreate" class="btn btn-primary w-100 mb-3">+ New Task</button>
+    <ul class="nav flex-column">
+      <li class="nav-item"><a class="nav-link" href="#">Dashboard</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Wiki Book</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Customers</a></li>
+      <li class="nav-item"><a class="nav-link d-flex justify-content-between align-items-center" href="#">Chat <span class="badge bg-primary">0</span></a></li>
+      <!-- ... add other modules similarly -->
+      <li class="nav-item"><a class="nav-link active" href="#">Tasks</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Leads</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Inbox</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Settings</a></li>
+    </ul>
+  </nav>
 
-  <!-- Modal -->
-  <div class="modal fade" id="taskModal" tabindex="-1">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header"><h5>Create Task</h5><button data-bs-dismiss="modal" class="btn-close"></button></div>
-        <div class="modal-body">
-          <input id="client" class="form-control mb-2" placeholder="Client Name" />
-          <input type="date" id="start" class="form-control mb-2"/>
-          <input type="date" id="due" class="form-control mb-2"/>
-          <select id="status" class="form-select mb-2">
-            <option value="new">Not Started</option>
-            <option value="progress">In Progress</option>
-            <option value="testing">Testing</option>
-            <option value="complete">Complete</option>
-          </select>
-          <select id="priority" class="form-select mb-2"><option>Low</option><option>Medium</option><option>High</option></select>
-        </div>
-        <div class="modal-footer">
-          <button id="saveTask" class="btn btn-primary">Save</button>
-          <button class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        </div>
+  <main class="flex-fill p-4">
+    <div class="row mb-4">
+      <div class="col-sm"><div class="card p-3 text-center"><strong>Not Started</strong><div id="cntNew">0</div></div></div>
+      <div class="col-sm"><div class="card p-3 text-center"><strong>In Progress</strong><div id="cntProgress">0</div></div></div>
+      <div class="col-sm"><div class="card p-3 text-center"><strong>Testing</strong><div id="cntTesting">0</div></div></div>
+      <div class="col-sm"><div class="card p-3 text-center"><strong>Awaiting Feedback</strong><div id="cntAwait">0</div></div></div>
+      <div class="col-sm"><div class="card p-3 text-center"><strong>Complete</strong><div id="cntComplete">0</div></div></div>
+    </div>
+
+    <div class="table-responsive bg-white rounded shadow-sm">
+      <table class="table">
+        <thead class="table-light">
+          <tr>
+            <th>#</th><th>Name</th><th>Status</th><th>Start</th><th>Due</th>
+            <th>Assigned</th><th>Tags</th><th>Priority</th><th>Actions</th>
+          </tr>
+        </thead>
+        <tbody id="taskBody"><tr><td colspan="9" class="text-center p-4">No tasks</td></tr></tbody>
+      </table>
+    </div>
+  </main>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="taskModal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header"><h5>Create Task</h5><button data-bs-dismiss="modal" class="btn-close"></button></div>
+      <div class="modal-body">
+        <input id="name" class="form-control mb-2" placeholder="Task Name"/>
+        <input type="date" id="start" class="form-control mb-2"/>
+        <input type="date" id="due" class="form-control mb-2"/>
+        <select id="status" class="form-select mb-2">
+          <option value="Not Started">Not Started</option>
+          <option value="In Progress">In Progress</option>
+          <option value="Testing">Testing</option>
+          <option value="Awaiting Feedback">Awaiting Feedback</option>
+          <option value="Complete">Complete</option>
+        </select>
+        <input id="assigned" class="form-control mb-2" placeholder="Assignee"/>
+        <input id="tags" class="form-control mb-2" placeholder="Comma-separated tags"/>
+        <select id="priority" class="form-select mb-2"><option>Low</option><option>Medium</option><option>High</option><option>Urgent</option></select>
+      </div>
+      <div class="modal-footer">
+        <button id="saveBtn" class="btn btn-primary">Save</button>
+        <button class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
       </div>
     </div>
   </div>
+</div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    const tasks = [];
-    function updateCounts() {
-      const counts = { new:0, progress:0, testing:0, complete:0 };
-      tasks.forEach(t => counts[t.status]++);
-      document.getElementById('c-'+Object.keys(counts)[0]).textContent = counts.new;
-      document.getElementById('c-progress').textContent = counts.progress;
-      document.getElementById('c-testing').textContent = counts.testing;
-      document.getElementById('c-complete').textContent = counts.complete;
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+  const tasks = [];
+  function updateSummary() {
+    const counts = { "Not Started":0,"In Progress":0,"Testing":0,"Awaiting Feedback":0,"Complete":0 };
+    tasks.forEach(t => counts[t.status]++);
+    document.getElementById('cntNew').textContent = counts["Not Started"];
+    document.getElementById('cntProgress').textContent = counts["In Progress"];
+    document.getElementById('cntTesting').textContent = counts["Testing"];
+    document.getElementById('cntAwait').textContent = counts["Awaiting Feedback"];
+    document.getElementById('cntComplete').textContent = counts["Complete"];
+  }
+  function renderTasks() {
+    const body = document.getElementById('taskBody');
+    body.innerHTML = '';
+    if (!tasks.length) {
+      body.innerHTML = '<tr><td colspan="9" class="text-center p-4">No tasks</td></tr>';
+      return;
     }
-    function renderTable() {
-      const body = document.getElementById('taskBody');
-      body.innerHTML = '';
-      if (!tasks.length) {
-        body.innerHTML = '<tr><td colspan="6" class="text-center py-4">No tasks yet</td></tr>';
-        return;
-      }
-      tasks.forEach((t,i) => {
-        const tr = document.createElement('tr');
-        tr.innerHTML = `<td>${i+1}</td><td>${t.client}</td>
-          <td><span class="badge bg-secondary badge-status">${t.status.replace('-', ' ')}</span></td>
-          <td>${t.start}</td><td>${t.due}</td><td>${t.priority}</td>`;
-        body.appendChild(tr);
-      });
-    }
-    document.getElementById('btnNew').onclick = () => new bootstrap.Modal(document.getElementById('taskModal')).show();
-    document.getElementById('saveTask').onclick = () => {
-      const c = client.value.trim(), s = start.value, d = due.value, st = status.value, p = priority.value;
-      if (!c || !s || !d) return alert('All fields required');
-      tasks.push({ client:c, start:s, due:d, status:st, priority:p });
-      updateCounts(); renderTable();
-      bootstrap.Modal.getInstance(document.getElementById('taskModal')).hide();
-      client.value = '';
+    tasks.forEach((t,i) => {
+      const tr = document.createElement('tr');
+      tr.innerHTML = `<td>${i+1}</td>
+        <td>${t.name}</td>
+        <td><span class="badge bg-info status-badge">${t.status}</span></td>
+        <td>${t.start}</td><td>${t.due}</td>
+        <td>${t.assigned}</td>
+        <td>${t.tags.split(',').map(x=>' <span class="tag-pill">'+x.trim()+'</span>').join('')}</td>
+        <td>${t.priority}</td>
+        <td><button class="btn btn-sm btn-outline-primary">Edit</button></td>`;
+      body.appendChild(tr);
+    });
+  }
+
+  document.getElementById('btnCreate').onclick = () => {
+    new bootstrap.Modal(document.getElementById('taskModal')).show();
+  };
+  document.getElementById('saveBtn').onclick = () => {
+    const t = {
+      name: name.value.trim(), start: start.value, due: due.value,
+      status: status.value, assigned: assigned.value, tags: tags.value, priority: priority.value
     };
-    updateCounts(); renderTable();
-  </script>
+    if (!t.name || !t.start || !t.due) return alert('Required fields missing');
+    tasks.push(t);
+    updateSummary();
+    renderTasks();
+    bootstrap.Modal.getInstance(document.getElementById('taskModal')).hide();
+  };
+
+  updateSummary();
+  renderTasks();
+</script>
 </body>
 </html>
