--- a/dashboard.html
+++ b/dashboard.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>CRM‑Style Dashboard</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <meta charset="UTF‑8"/>
+  <meta name="viewport" content="width=device‑width,initial‑scale=1"/>
+  <title>CRM Dashboard</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body { background: #f4f8fb; font-family: 'Poppins', sans-serif; }
-    .sidebar { width: 260px; }
+    body { background:#f4f8fb; font-family:'Poppins', sans-serif; }
+    nav.sidebar { width:250px; }
     .status-badge { text-transform: capitalize; }
-    .tag-pill { margin-right: 4px; padding: 2px 6px; background: #e0e0e0; border-radius: 4px; font-size: 12px; }
+    .tag-pill { margin:2px 4px 2px 0; padding:2px 6px; background:#e0e0e0; border-radius:4px; font-size:12px; display:inline-block;}
   </style>
 </head>
 <body>
 <div class="d-flex">
-  <nav class="sidebar bg-white vh-100 border-end p-3">
+  <nav class="sidebar bg-white vh-100 p-3 border-end">
     <button id="btnCreate" class="btn btn-primary w-100 mb-3">+ New Task</button>
     <ul class="nav flex-column">
       <li class="nav-item"><a class="nav-link" href="#">Dashboard</a></li>
       <li class="nav-item"><a class="nav-link" href="#">Wiki Book</a></li>
       <li class="nav-item"><a class="nav-link" href="#">Customers</a></li>
-      <li class="nav-item"><a class="nav-link d-flex justify-content-between align-items-center" href="#">Chat <span class="badge bg-primary">0</span></a></li>
-      <!-- ... add other modules similarly -->
+      <li class="nav-item">
+        <a class="nav-link d-flex justify-content-between align-items-center" href="#">
+          Chat <span class="badge bg-primary">0</span>
+        </a>
+      </li>
       <li class="nav-item"><a class="nav-link active" href="#">Tasks</a></li>
       <li class="nav-item"><a class="nav-link" href="#">Leads</a></li>
       <li class="nav-item"><a class="nav-link" href="#">Inbox</a></li>
       <li class="nav-item"><a class="nav-link" href="#">Settings</a></li>
     </ul>
   </nav>
-
   <main class="flex-fill p-4">
     <div class="row mb-4">
-      <div class="col-sm"><div class="card p-3 text-center"><strong>Not Started</strong><div id="cntNew">0</div></div></div>
-      <div class="col-sm"><div class="card p-3 text-center"><strong>In Progress</strong><div id="cntProgress">0</div></div></div>
-      <div class="col-sm"><div class="card p-3 text-center"><strong>Testing</strong><div id="cntTesting">0</div></div></div>
-      <div class="col-sm"><div class="card p-3 text-center"><strong>Awaiting Feedback</strong><div id="cntAwait">0</div></div></div>
-      <div class="col-sm"><div class="card p-3 text-center"><strong>Complete</strong><div id="cntComplete">0</div></div></div>
+      <div class="col"><div class="card p-3 text-center"><strong>Not Started</strong><div id="countNotStarted">0</div></div></div>
+      <div class="col"><div class="card p-3 text-center"><strong>In Progress</strong><div id="countInProgress">0</div></div></div>
+      <div class="col"><div class="card p-3 text-center"><strong>Testing</strong><div id="countTesting">0</div></div></div>
+      <div class="col"><div class="card p-3 text-center"><strong>Awaiting Feedback</strong><div id="countAwaiting">0</div></div></div>
+      <div class="col"><div class="card p-3 text-center"><strong>Complete</strong><div id="countComplete">0</div></div></div>
     </div>
-
     <div class="table-responsive bg-white rounded shadow-sm">
-      <table class="table">
+      <table class="table mb-0">
         <thead class="table-light">
-          <tr>
-            <th>#</th><th>Name</th><th>Status</th><th>Start</th><th>Due</th>
-            <th>Assigned</th><th>Tags</th><th>Priority</th><th>Actions</th>
-          </tr>
+          <tr><th>#</th><th>Name</th><th>Status</th><th>Start</th><th>Due</th><th>Assigned</th><th>Tags</th><th>Priority</th><th>Actions</th></tr>
         </thead>
-        <tbody id="taskBody"><tr><td colspan="9" class="text-center p-4">No tasks</td></tr></tbody>
+        <tbody id="taskBody"><tr><td colspan="9" class="text-center py-4">No tasks</td></tr></tbody>
       </table>
     </div>
   </main>
@@ -54,80 +53,76 @@
 
 <!-- Modal -->
 <div class="modal fade" id="taskModal" tabindex="-1">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header"><h5>Create Task</h5><button data-bs-dismiss="modal" class="btn-close"></button></div>
-      <div class="modal-body">
-        <input id="name" class="form-control mb-2" placeholder="Task Name"/>
-        <input type="date" id="start" class="form-control mb-2"/>
-        <input type="date" id="due" class="form-control mb-2"/>
-        <select id="status" class="form-select mb-2">
-          <option value="Not Started">Not Started</option>
-          <option value="In Progress">In Progress</option>
-          <option value="Testing">Testing</option>
-          <option value="Awaiting Feedback">Awaiting Feedback</option>
-          <option value="Complete">Complete</option>
-        </select>
-        <input id="assigned" class="form-control mb-2" placeholder="Assignee"/>
-        <input id="tags" class="form-control mb-2" placeholder="Comma-separated tags"/>
-        <select id="priority" class="form-select mb-2"><option>Low</option><option>Medium</option><option>High</option><option>Urgent</option></select>
-      </div>
-      <div class="modal-footer">
-        <button id="saveBtn" class="btn btn-primary">Save</button>
-        <button class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-      </div>
+  <div class="modal-dialog"><div class="modal-content">
+    <div class="modal-header"><h5>Create Task</h5><button class="btn-close" data-bs-dismiss="modal"></button></div>
+    <div class="modal-body">
+      <input id="taskName" class="form-control mb-2" placeholder="Task Name"/>
+      <input type="date" id="taskStart" class="form-control mb-2"/>
+      <input type="date" id="taskDue" class="form-control mb-2"/>
+      <select id="taskStatus" class="form-select mb-2">
+        <option>Not Started</option><option>In Progress</option><option>Testing</option><option>Awaiting Feedback</option><option>Complete</option>
+      </select>
+      <input id="taskAssigned" class="form-control mb-2" placeholder="Assigned to"/>
+      <input id="taskTags" class="form-control mb-2" placeholder="Tags (comma‑separated)"/>
+      <select id="taskPriority" class="form-select mb-2"><option>Low</option><option>Medium</option><option>High</option><option>Urgent</option></select>
     </div>
-  </div>
+    <div class="modal-footer">
+      <button id="saveTask" class="btn btn-primary">Save</button>
+      <button class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+    </div>
+  </div></div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/js/bootstrap.bundle.min.js"></script>
 <script>
   const tasks = [];
   function updateSummary() {
-    const counts = { "Not Started":0,"In Progress":0,"Testing":0,"Awaiting Feedback":0,"Complete":0 };
+    const counts = { "Not Started":0, "In Progress":0, "Testing":0, "Awaiting Feedback":0, "Complete":0 };
     tasks.forEach(t => counts[t.status]++);
-    document.getElementById('cntNew').textContent = counts["Not Started"];
-    document.getElementById('cntProgress').textContent = counts["In Progress"];
-    document.getElementById('cntTesting').textContent = counts["Testing"];
-    document.getElementById('cntAwait').textContent = counts["Awaiting Feedback"];
-    document.getElementById('cntComplete').textContent = counts["Complete"];
+    document.getElementById('countNotStarted').textContent = counts["Not Started"];
+    document.getElementById('countInProgress').textContent = counts["In Progress"];
+    document.getElementById('countTesting').textContent = counts["Testing"];
+    document.getElementById('countAwaiting').textContent = counts["Awaiting Feedback"];
+    document.getElementById('countComplete').textContent = counts["Complete"];
   }
   function renderTasks() {
     const body = document.getElementById('taskBody');
-    body.innerHTML = '';
+    body.innerHTML = "";
     if (!tasks.length) {
-      body.innerHTML = '<tr><td colspan="9" class="text-center p-4">No tasks</td></tr>';
+      body.innerHTML = '<tr><td colspan="9" class="text-center py-4">No tasks</td></tr>';
       return;
     }
     tasks.forEach((t,i) => {
       const tr = document.createElement('tr');
-      tr.innerHTML = `<td>${i+1}</td>
-        <td>${t.name}</td>
-        <td><span class="badge bg-info status-badge">${t.status}</span></td>
-        <td>${t.start}</td><td>${t.due}</td>
-        <td>${t.assigned}</td>
-        <td>${t.tags.split(',').map(x=>' <span class="tag-pill">'+x.trim()+'</span>').join('')}</td>
-        <td>${t.priority}</td>
-        <td><button class="btn btn-sm btn-outline-primary">Edit</button></td>`;
+      tr.innerHTML = \`
+        <td>\${i+1}</td>
+        <td>\${t.name}</td>
+        <td><span class="badge bg-info status-badge">\${t.status}</span></td>
+        <td>\${t.start}</td><td>\${t.due}</td>
+        <td>\${t.assigned}</td>
+        <td>\${t.tags.split(',').map(x=>'<span class="tag-pill">'+x.trim()+'</span>').join('')}</td>
+        <td>\${t.priority}</td>
+        <td><button class="btn btn-sm btn-outline-primary">Edit</button></td>\`;
       body.appendChild(tr);
     });
   }
-
-  document.getElementById('btnCreate').onclick = () => {
-    new bootstrap.Modal(document.getElementById('taskModal')).show();
-  };
-  document.getElementById('saveBtn').onclick = () => {
+  document.getElementById('btnCreate').onclick = () => new bootstrap.Modal(document.getElementById('taskModal')).show();
+  document.getElementById('saveTask').onclick = () => {
     const t = {
-      name: name.value.trim(), start: start.value, due: due.value,
-      status: status.value, assigned: assigned.value, tags: tags.value, priority: priority.value
+      name: taskName.value.trim(),
+      start: taskStart.value,
+      due: taskDue.value,
+      status: taskStatus.value,
+      assigned: taskAssigned.value,
+      tags: taskTags.value,
+      priority: taskPriority.value
     };
-    if (!t.name || !t.start || !t.due) return alert('Required fields missing');
+    if (!t.name || !t.start || !t.due) return alert('All required fields must be filled');
     tasks.push(t);
     updateSummary();
     renderTasks();
     bootstrap.Modal.getInstance(document.getElementById('taskModal')).hide();
   };
-
   updateSummary();
   renderTasks();
 </script>
