--- a/index.html
+++ b/index.html
@@ -25,30 +25,15 @@
       position: relative;
     }
 
-    .split-bg {
-      position: absolute;
+    video.bg-video {
+      position: fixed;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
-      display: flex;
+      min-width: 100%;
+      min-height: 100%;
       z-index: 0;
-    }
-
-    .left-side, .right-side {
-      flex: 1;
-      background-size: cover;
-      background-position: center;
-      opacity: 0.07;
-      transition: all 0.3s ease;
-    }
-
-    .left-side {
-      background-image: url('https://i.imgur.com/ZmYrV1j.jpg');
-    }
-
-    .right-side {
-      background-image: url('https://i.imgur.com/Ns9bq0D.jpg');
+      object-fit: cover;
+      filter: brightness(0.4) blur(2px);
     }
 
     .title {
@@ -123,14 +108,6 @@
     }
 
     @media screen and (max-width: 768px) {
-      .split-bg {
-        flex-direction: column;
-      }
-
-      .left-side, .right-side {
-        height: 50%;
-      }
-
       .title {
         font-size: 1.8rem;
       }
@@ -139,11 +116,11 @@
 </head>
 <body>
 
-  <!-- Background Image Layer -->
-  <div class="split-bg">
-    <div class="left-side"></div>
-    <div class="right-side"></div>
-  </div>
+  <!-- Live Animated Background -->
+  <video autoplay muted loop class="bg-video">
+    <source src="https://cdn.coverr.co/videos/coverr-futuristic-globe-technology-9481/1080p.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
 
   <!-- Title -->
   <div class="title">⚡ AI FUTURE POWER ⚡</div>
