--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
   <!-- Content -->
   <div class="container">
-    <div class="title">⚡ AI FUTURE POWER ⚡</div>
+    <div class="title"> AI LOGISTICS COMPANY </div>
     <div class="login-box">
       <h2>🔐 Login</h2>
       <input type="text" id="username" placeholder="Username" />
@@ -171,3 +171,4 @@
 
 </body>
 </html>
+
