--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login | AI FUTURE POWER</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
+  <!-- Firebase SDK scripts -->
+  <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-auth.js"></script>
+
   <style>
     * {
       margin: 0;
@@ -136,6 +142,23 @@
       }
     }
   </style>
+
+  <script>
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyDaZjc53y1us3aFL9yfExSpYVvYSZt0aeA",
+      authDomain: "ai-logistics-company.firebaseapp.com",
+      projectId: "ai-logistics-company",
+      storageBucket: "ai-logistics-company.firebasestorage.app",
+      messagingSenderId: "971305955081",
+      appId: "1:971305955081:web:4f422c8a9b9ebbd868add8",
+      measurementId: "G-3R5N3WW6X1"
+    };
+
+    // Initialize Firebase
+    const app = firebase.initializeApp(firebaseConfig);
+    const analytics = firebase.getAnalytics(app);
+  </script>
 </head>
 <body>
 
@@ -171,4 +194,3 @@
 
 </body>
 </html>
-
